Form, navbar and visual effects updated

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Sitio web para el Colegio de Arquitectos e Ingenieros Civiles de la Huasteca"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Colegio de Arquitectos e Ingenieros Civiles de la Huasteca</title>
   </head>
